Date input changed. Slight design changes.

--- a/resources/assets/app/html/games/create.html
+++ b/resources/assets/app/html/games/create.html
@@ -1,15 +1,11 @@
 <div class="row">
     <div class="col-lg-8 col-md-12 col-sm-12 col-xs-12 col-centered content-wrap create-game-container">
         <form>
-            <div class="col-md-6 col-centered datepicker-container">
-                <input id="played-at"
-                       name=""
-                       type="text"
-                       class="form-control"
-                       ng-value="game.playedAt"
-                >
-                <md-datepicker ng-model="user.submissionDate" md-placeholder="Enter date">
-                </md-datepicker>
+            <div class="col-md-5 col-centered datepicker-container">
+                <md-input-container class="md-block datepicker-container">
+                    <label for="played-at"></label>
+                    <input id="played-at" ng-model="game.playedAt">
+                </md-input-container>
             </div>
             <div class="game-graphic">
                 <div class="team team-a">
@@ -18,7 +14,7 @@
                         <div class="info">
                             <div class="name">{{ player.name || 'select player...' }}</div>
                         </div>
-                        <div class="user-avatar empty"
+                        <div class="user-avatar" ng-class="player.id ? '' : 'empty'"
                              back-img="{{ player.avatar_url }}">
                             <div class="fa fa-plus add-button"></div>
                             <img ng-src="{{ player.avatar_url }}" />
@@ -39,7 +35,7 @@
                 <div class="team team-b">
                     <div class="team-user" ng-repeat="player in game.players.losers"
                          ng-click="openDialog(); game.setActiveTeam('losers'); game.setActiveIndex($index);">
-                        <div class="user-avatar empty"
+                        <div class="user-avatar" ng-class="player.id ? '' : 'empty'"
                              back-img="{{ player.avatar_url }}">
                             <div class="fa fa-plus add-button"></div>
                             <img ng-src="{{ player.avatar_url }}" />
