Select player list design changed.

--- a/resources/assets/app/html/games/index.html
+++ b/resources/assets/app/html/games/index.html
@@ -94,6 +94,10 @@
                     </div>
                 </div>
                 <div class="game-date">{{ game.played_at }}</div>
+
+                <!--<md-button class="md-icon-button" aria-label="Complain" md-ink-ripple="#c01935">-->
+                    <!--<i class="fa fa-info"></i>-->
+                <!--</md-button>-->
             </div>
         </div>
     </div>
