--- a/resources/assets/app/html/user/profile.html
+++ b/resources/assets/app/html/user/profile.html
@@ -37,7 +37,8 @@
                 <div class="col-sm-12 text-right">
                     <md-button
                             ng-if="!currentPlayer.deleted"
-                            md-no-ink class="md-primary"
+                            md-no-ink
+                            class="delete-profile-button"
                             ng-click="openDialog()"
                     >Delete profile</md-button>
                     <md-button
