--- a/resources/assets/app/html/games/update.html
+++ b/resources/assets/app/html/games/update.html
@@ -31,7 +31,7 @@
                             <select ng-model="game.points.losers" ng-options="point for point in points"></select>
                         </div>
                     </div>
-                    <md-button class="md-icon-button md-primary md-button-auto"
+                    <md-button class="md-icon-button md-primary md-button-auto change-sides-button"
                                aria-label="Change sides"
                                style="padding: 15px"
                                ng-click="game.changeSides()"
