--- a/resources/assets/app/html/user/profile.html
+++ b/resources/assets/app/html/user/profile.html
@@ -33,20 +33,17 @@
                 </md-input-container>
             </div>
 
-            <div class="form-group">
-                <div class="col-sm-12 text-right">
-                    <md-button
-                            ng-if="!currentPlayer.deleted"
-                            md-no-ink
-                            class="delete-profile-button"
-                            ng-click="openDialog()"
-                    >Delete profile</md-button>
-                    <md-button
-                            class="md-raised md-primary"
-                            ng-click="saveChanges(player)"
-                            ng-disabled="loading"
-                    >Save</md-button>
-                </div>
+            <div class="col-md-12 col-centered text-right">
+                <md-button
+                        ng-if="!currentPlayer.deleted"
+                        class="delete-button"
+                        ng-click="openDialog()"
+                >Delete profile</md-button>
+                <md-button
+                        class="save-button"
+                        ng-click="saveChanges(player);"
+                        ng-disabled="loading"
+                >Save</md-button>
             </div>
         </form>
     </div>
@@ -55,7 +52,7 @@
 <script type="text/ng-template" id="delete-confirmation">
     Do you really want to delete your profile?
     <div class="text-right">
-        <button class="btn btn-primary" ng-click="deletePlayer(player)">Yes</button>
-        <button class="btn btn-danger" ng-click="closeThisDialog()">No</button>
+        <button class="btn btn-primary" ng-click="deletePlayer(player)">Delete</button>
+        <button class="btn btn-danger" ng-click="closeThisDialog()">Cancel</button>
     </div>
 </script>
