--- a/resources/assets/app/html/dialogues/select-player.html
+++ b/resources/assets/app/html/dialogues/select-player.html
@@ -3,7 +3,7 @@
         <h4 class="text-center">Select player</h4>
         <div class="list-group" style="height: 85vh; overflow-y: scroll">
             <a href="javascript:void(0)" class="list-group-item"
-               ng-repeat="player in players | filter:{selected: false}"
+               ng-repeat="player in players | filter:{selected: false} | orderBy: orderPlayers"
                ng-click="closeThisDialog(); selectPlayer(player.id);"
                ng-class="player.id == currentPlayer.id ? 'active' : ''"
             >
