--- a/resources/assets/app/html/games/create.html
+++ b/resources/assets/app/html/games/create.html
@@ -84,8 +84,11 @@
                 </div>
             </div>
             <div class="form-group">
-                <div class="col-sm-12 text-right" ng-show="game.isValid">
+                <div class="col-sm-12 text-right" ng-show="game.isValid && !loading">
                     <md-button class="save-button" type="submit" ng-click="createGame()">Save</md-button>
+                </div>
+                <div class="col-sm-12 text-right" ng-show="loading">
+                    <md-progress-circular style="display: inline-block" md-mode="indeterminate"></md-progress-circular>
                 </div>
             </div>
         </form>
