issue KICK-11: input in the 'Data' field of 'Add Game' disabled

--- a/resources/assets/app/html/games/create.html
+++ b/resources/assets/app/html/games/create.html
@@ -4,7 +4,7 @@
             <div class="col-md-5 col-centered datepicker-container">
                 <md-input-container class="md-block datepicker-container">
                     <label for="played-at"></label>
-                    <input id="played-at" ng-model="game.playedAt">
+                    <input id="played-at" ng-model="game.playedAt" onkeydown="return false;">
                 </md-input-container>
             </div>
             <div class="game-graphic">
