fixed facebook signup; added satellizer dependecy

--- a/resources/assets/app/html/auth/signup.html
+++ b/resources/assets/app/html/auth/signup.html
@@ -4,7 +4,7 @@
 
 <form class="form-sign" method="POST" action="/signup">
     <h2 class="form-sign-heading">Please sign up</h2>
-    <a href="/fb/signin" class="sign-with">Sign up with Facebook</a>
+    <a href="#" ng-click="fbSignup()" class="sign-with">Sign up with Facebook</a>
     <div class="sign-choices">OR</div>
 
     <div class="form-inputs">
