Changed satellizer's redirectUri.

--- a/resources/assets/app/html/auth/signin.html
+++ b/resources/assets/app/html/auth/signin.html
@@ -4,7 +4,7 @@
 
 <form class="form-sign" method="POST" action="/signin">
     <h2 class="form-sign-heading">Please sign in</h2>
-    <a href="#" ng-click="fbSignin()" class="sign-with">Sign up with Facebook</a>
+    <a href="#/" ng-click="fbSignin()" class="sign-with">Sign up with Facebook</a>
     <div class="sign-choices">OR</div>
 
     <div class="form-inputs">
